<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamplantpower.activities.TemperatureDisplay">

    <TextView
        android:id="@+id/temperatureTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="Temperature"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="33dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/minCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="177dp"
        android:layout_marginTop="356dp"
        android:text="@string/text_degree_c"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degreeCMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="356dp"
        android:text="@string/text_degree_c"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/minCelsius"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degreeCValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="93dp"
        android:layout_marginTop="105dp"
        android:text="@string/text_degree_c"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/degreeFValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="95dp"
        android:layout_marginTop="144dp"
        android:text="@string/text_degree_f"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/celciusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_celsius"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="73dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/fahrenheitValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="151dp"
        android:text="@string/value_fahrenheit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/historicalTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="217dp"
        android:onClick="openHistorical"
        android:text="@string/button_historical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/setMaxTemp"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/value_set_max"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="339dp"
        app:layout_constraintLeft_toRightOf="@+id/setMinTemp"
        android:layout_marginLeft="73dp" />

    <EditText
        android:id="@+id/setMinTemp"
        android:layout_width="108dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/value_set_min"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="339dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/setTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="429dp"
        android:onClick="setRange"
        android:text="@string/button_set"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="293dp"
        android:text="Set min and max temperature:"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
