...
                android:layout_below="@+id/messageBoardButton"
                android:layout_weight="1"
                android:onClick="loadLight"
                android:text="Light" />

            <Button
                android:id="@+id/temperatureButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lightButton"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/lightButton"
                android:layout_marginBottom="65dp"
...
